--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -48,10 +48,10 @@ body:
       label: Version
       description: What is the version of CloudNativePG you are running?
       options:
-        - "1.24.0"
-        - "1.23.4"
+        - "1.25 (latest patch)"
+        - "1.24 (latest patch)"
         - "trunk (main)"
-        - "older in 1.23.x"
+        - "older in 1.24.x"
         - "older minor (unsupported)"
     validations:
       required: true
@@ -60,11 +60,10 @@ body:
     attributes:
       label: What version of Kubernetes are you using?
       options:
+        - "1.32"
         - "1.31"
         - "1.30"
         - "1.29"
-        - "1.28"
-        - "1.27 (unsupported)"
         - "other (unsupported)"
     validations:
       required: true
