--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -8,8 +8,8 @@
   baseBranches: [
     'main',
     'release-1.22',
-    'release-1.23',
     'release-1.24',
+    'release-1.25'
   ],
   ignorePaths: [
     'docs/**',
