--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -73,7 +73,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branch: [release-1.22, release-1.24]
+        branch: [release-1.22, release-1.24, release-1.25]
     env:
       PR: ${{ github.event.pull_request.number }}
     outputs:
