--- a/.github/workflows/close-inactive-issues.yml
+++ b/.github/workflows/close-inactive-issues.yml
@@ -1,6 +1,7 @@
 # See https://github.com/marketplace/actions/close-stale-issues
 name: Close inactive issues
 on:
+  workflow_dispatch:
   schedule:
     - cron: "30 1 * * *"
 
@@ -11,7 +12,7 @@ jobs:
       issues: write
       #pull-requests: write
     steps:
-      - uses: actions/stale@v5
+      - uses: actions/stale@v9
         with:
           days-before-issue-stale: 60
           days-before-issue-close: 14
