--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -236,11 +236,11 @@ jobs:
           tags: ${{ steps.docker-meta.outputs.tags }}
       -
         name: Generate SBOM for image
-        uses: anchore/sbom-action@v0.15.10
+        uses: anchore/sbom-action@v0.17.9
         with:
           image: ${{ steps.docker-meta.outputs.tags }}
           artifact-name: cloudnative-pg-${{ env.VERSION }}.spdx
-          upload-artifact: true
+          upload-artifact: false
       -
         name: Build and push UBI8
         uses: docker/build-push-action@v6
@@ -254,11 +254,11 @@ jobs:
           tags: ${{ steps.docker-meta-ubi8.outputs.tags }}
       -
         name: Generate SBOM for image UBI8
-        uses: anchore/sbom-action@v0.15.10
+        uses: anchore/sbom-action@v0.17.9
         with:
           image: ${{ steps.docker-meta-ubi8.outputs.tags }}
           artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi8.spdx
-          upload-artifact: true
+          upload-artifact: false
       -
         name: Build and push UBI9
         uses: docker/build-push-action@v6
@@ -272,11 +272,16 @@ jobs:
           tags: ${{ steps.docker-meta-ubi9.outputs.tags }}
       -
         name: Generate SBOM for image UBI9
-        uses: anchore/sbom-action@v0.15.10
+        uses: anchore/sbom-action@v0.17.9
         with:
           image: ${{ steps.docker-meta-ubi9.outputs.tags }}
-          artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi8.spdx
-          upload-artifact: true
+          artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi9.spdx
+          upload-artifact: false
+      -
+        name: publish SBOMs
+        uses: anchore/sbom-action/publish-sbom@v0.17.9
+        with:
+          sbom-artifact-match: ".*\\.spdx$"
 
   olm-bundle:
     name: Create OLM bundle and catalog
