--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -91,7 +91,7 @@ jobs:
     needs:
       - check-version
     outputs:
-      version: ${{ env.VERSION }}
+      commit_version: ${{ env.VERSION }}
       author_name: ${{ steps.build-meta.outputs.author_name }}
       author_email: ${{ steps.build-meta.outputs.author_email }}
       digest: ${{ steps.build.outputs.digest }}
@@ -138,6 +138,10 @@ jobs:
         with:
           gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.GPG_PASSPHRASE }}
+      -
+        name: download syft
+        id: download-syft
+        uses: anchore/sbom-action/download-syft@v0.17.9
       -
         name: Set GoReleaser environment
         env:
@@ -236,7 +240,7 @@ jobs:
           tags: ${{ steps.docker-meta.outputs.tags }}
       -
         name: Generate SBOM for image
-        uses: anchore/sbom-action@v0.15.10
+        uses: anchore/sbom-action@v0.17.9
         with:
           image: ${{ steps.docker-meta.outputs.tags }}
           artifact-name: cloudnative-pg-${{ env.VERSION }}.spdx
@@ -254,7 +258,7 @@ jobs:
           tags: ${{ steps.docker-meta-ubi8.outputs.tags }}
       -
         name: Generate SBOM for image UBI8
-        uses: anchore/sbom-action@v0.15.10
+        uses: anchore/sbom-action@v0.17.9
         with:
           image: ${{ steps.docker-meta-ubi8.outputs.tags }}
           artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi8.spdx
@@ -272,10 +276,10 @@ jobs:
           tags: ${{ steps.docker-meta-ubi9.outputs.tags }}
       -
         name: Generate SBOM for image UBI9
-        uses: anchore/sbom-action@v0.15.10
+        uses: anchore/sbom-action@v0.17.9
         with:
           image: ${{ steps.docker-meta-ubi9.outputs.tags }}
-          artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi8.spdx
+          artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi9.spdx
           upload-artifact: true
 
   olm-bundle:
@@ -354,7 +358,7 @@ jobs:
       (always() && !cancelled()) &&
       needs.olm-bundle.result == 'success'
     env:
-      VERSION: ${{ needs.release-binaries.outputs.version }}
+      VERSION: ${{ needs.release-binaries.outputs.commit_version }}
     steps:
       - name: Checkout community-operators
         uses: actions/checkout@v4
@@ -429,7 +433,7 @@ jobs:
       needs.olm-bundle.result == 'success' &&
       github.repository_owner == 'cloudnative-pg'
     env:
-      VERSION: ${{ needs.release-binaries.outputs.version }}
+      VERSION: ${{ needs.release-binaries.outputs.commit_version }}
     runs-on: ubuntu-24.04
     steps:
       -
