chore: reworked the final move
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -6183,7 +6183,7 @@ spec:
               majorVersionUpgradeFromImage:
                 description: |-
                   MajorVersionUpgradeFromImage contains the image from which we are upgrading
-                  when a major version upgrade is running
+                  when a Postgres major version upgrade is running
                 type: string
               managedRolesStatus:
                 description: ManagedRolesStatus reports the state of the managed roles
