--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -36,6 +36,8 @@ env:
   REGISTRY_USER: ${{ github.actor }}
   REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
   OPP_SCRIPT_URL: "https://raw.githubusercontent.com/redhat-openshift-ecosystem/community-operators-pipeline/ci/latest/ci/scripts/opp.sh"
+  # change to 'debug' to see detail syft trace
+  SYFT_LOG_LEVEL: 'info'
 
 defaults:
   run:
@@ -665,11 +667,23 @@ jobs:
           cache-from: ${{ env.BUILD_PUSH_CACHE_FROM }}
           cache-to: ${{ env.BUILD_PUSH_CACHE_TO }}
 
-      - name: Generate SBOM for image
+      - name: Generate SBOM for image of amd64
         uses: anchore/sbom-action@v0.17.9
+        env:
+          SYFT_PLATFORM: 'amd64'
         with:
           image: ${{ steps.docker-meta.outputs.tags }}
-          artifact-name: cloudnative-pg-${{ env.VERSION }}.spdx
+          artifact-name: cloudnative-pg-${{ env.VERSION }}-${{ env.SYFT_PLATFORM }}.spdx
+          upload-artifact: true
+          upload-artifact-retention: 7d
+
+      - name: Generate SBOM for image of arm64
+        uses: anchore/sbom-action@v0.17.9
+        env:
+          SYFT_PLATFORM: 'arm64'
+        with:
+          image: ${{ steps.docker-meta.outputs.tags }}
+          artifact-name: cloudnative-pg-${{ env.VERSION }}-${{ env.SYFT_PLATFORM }}.spdx
           upload-artifact: true
           upload-artifact-retention: 7d
 
@@ -684,11 +698,23 @@ jobs:
             VERSION=${{ env.VERSION }}
           tags: ${{ steps.docker-meta-ubi8.outputs.tags }}
 
-      - name: Generate SBOM for image
+      - name: Generate SBOM for ubi8 image of amd64
         uses: anchore/sbom-action@v0.17.9
+        env:
+          SYFT_PLATFORM: 'amd64'
         with:
           image: ${{ steps.docker-meta-ubi8.outputs.tags }}
-          artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi8.spdx
+          artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi8-${{ env.SYFT_PLATFORM }}.spdx
+          upload-artifact: true
+          upload-artifact-retention: 7d
+
+      - name: Generate SBOM for ubi8 image of arm64
+        uses: anchore/sbom-action@v0.17.9
+        env:
+          SYFT_PLATFORM: 'arm64'
+        with:
+          image: ${{ steps.docker-meta-ubi8.outputs.tags }}
+          artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi8-${{ env.SYFT_PLATFORM }}.spdx
           upload-artifact: true
           upload-artifact-retention: 7d
 
@@ -703,11 +729,23 @@ jobs:
             VERSION=${{ env.VERSION }}
           tags: ${{ steps.docker-meta-ubi9.outputs.tags }}
 
-      - name: Generate SBOM for image
+      - name: Generate SBOM for ubi9 image of amd64
         uses: anchore/sbom-action@v0.17.9
+        env:
+          SYFT_PLATFORM: 'amd64'
         with:
           image: ${{ steps.docker-meta-ubi9.outputs.tags }}
-          artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi9.spdx
+          artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi9-${{ env.SYFT_PLATFORM }}.spdx
+          upload-artifact: true
+          upload-artifact-retention: 7d
+
+      - name: Generate SBOM for ubi9 image of arm64
+        uses: anchore/sbom-action@v0.17.9
+        env:
+          SYFT_PLATFORM: 'arm64'
+        with:
+          image: ${{ steps.docker-meta-ubi9.outputs.tags }}
+          artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi9-${{ env.SYFT_PLATFORM }}.spdx
           upload-artifact: true
           upload-artifact-retention: 7d
 
