--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -10,6 +10,7 @@ on:
 env:
   GOLANG_VERSION: "1.23.x"
   CNPG_IMAGE_NAME: "ghcr.io/${{ github.repository }}"
+  SYFT_LOG_LEVEL: 'info'
 
 permissions:
   contents: write
@@ -239,11 +240,22 @@ jobs:
             VERSION=${{ env.VERSION }}
           tags: ${{ steps.docker-meta.outputs.tags }}
       -
-        name: Generate SBOM for image
+        name: Generate SBOM for image of amd64
         uses: anchore/sbom-action@v0.17.9
+        env:
+          SYFT_PLATFORM: 'amd64'
         with:
           image: ${{ steps.docker-meta.outputs.tags }}
-          artifact-name: cloudnative-pg-${{ env.VERSION }}.spdx
+          artifact-name: cloudnative-pg-${{ env.VERSION }}-${{ env.SYFT_PLATFORM }}.spdx
+          upload-artifact: true
+      -
+        name: Generate SBOM for image of arm64
+        uses: anchore/sbom-action@v0.17.9
+        env:
+          SYFT_PLATFORM: 'arm64'
+        with:
+          image: ${{ steps.docker-meta.outputs.tags }}
+          artifact-name: cloudnative-pg-${{ env.VERSION }}-${{ env.SYFT_PLATFORM }}.spdx
           upload-artifact: true
       -
         name: Build and push UBI8
@@ -257,11 +269,22 @@ jobs:
             VERSION=${{ env.VERSION }}
           tags: ${{ steps.docker-meta-ubi8.outputs.tags }}
       -
-        name: Generate SBOM for image UBI8
+        name: Generate SBOM for image UBI8 of amd64
         uses: anchore/sbom-action@v0.17.9
+        env:
+          SYFT_PLATFORM: 'amd64'
         with:
           image: ${{ steps.docker-meta-ubi8.outputs.tags }}
-          artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi8.spdx
+          artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi8-${{ env.SYFT_PLATFORM }}.spdx
+          upload-artifact: true
+      -
+        name: Generate SBOM for image UBI8 of arm64
+        uses: anchore/sbom-action@v0.17.9
+        env:
+          SYFT_PLATFORM: 'arm64'
+        with:
+          image: ${{ steps.docker-meta-ubi8.outputs.tags }}
+          artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi8-${{ env.SYFT_PLATFORM }}.spdx
           upload-artifact: true
       -
         name: Build and push UBI9
@@ -275,11 +298,22 @@ jobs:
             VERSION=${{ env.VERSION }}
           tags: ${{ steps.docker-meta-ubi9.outputs.tags }}
       -
-        name: Generate SBOM for image UBI9
+        name: Generate SBOM for image UBI9 of amd64
         uses: anchore/sbom-action@v0.17.9
+        env:
+          SYFT_PLATFORM: 'amd64'
         with:
           image: ${{ steps.docker-meta-ubi9.outputs.tags }}
-          artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi9.spdx
+          artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi9-${{ env.SYFT_PLATFORM }}.spdx
+          upload-artifact: true
+      -
+        name: Generate SBOM for image UBI9 of arm64
+        uses: anchore/sbom-action@v0.17.9
+        env:
+          SYFT_PLATFORM: 'arm64'
+        with:
+          image: ${{ steps.docker-meta-ubi9.outputs.tags }}
+          artifact-name: cloudnative-pg-${{ env.VERSION }}-ubi9-${{ env.SYFT_PLATFORM }}.spdx
           upload-artifact: true
 
   olm-bundle:
