feat(pki): add `clusterDomain` to managedServices
The field `managed.services.clusterDomain` is now available. It customizes the cluster domain portion of the FQDN generated for services. Defaults to `cluster.domain`.

Closes #6979

We should decide if we want to backport it or not, it is a fix but it also adds a new field in the CRD

Signed-off-by: Armando Ruocco <armando.ruocco@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -3689,6 +3689,11 @@ spec:
                           - ro
                           type: string
                         type: array
+                      kubernetesClusterDomain:
+                        description: |-
+                          KubernetesClusterDomain is used to generate the domain portion of the service FQDN.
+                          If not provided, "cluster.local" is used.
+                        type: string
                     type: object
                 type: object
               maxSyncReplicas:
