feat: Add configurable retries for VolumeSnapshot backup operations
This commit adds the ability to configure retry behavior for VolumeSnapshot
operations in CloudNativePG. It addresses transient failures including
context deadline exceeded errors that can occur with certain storage providers.

The main changes include:

- Add VolumeSnapshotRetryConfiguration with configurable maxRetries and deadline
- Replace magic numbers with named constants
- Add metrics for monitoring VolumeSnapshot retry operations
- Add comprehensive documentation explaining CSI snapshotter vs operator retries
- Add end-to-end tests to verify the new retry functionality

This enhances resilience for VolumeSnapshot backups and gives cluster
administrators better control over retry behavior.

Fixes #7000

Signed-off-by: Jeff Mealo <jmealo@protonmail.com>
Signed-off-by: Jeffrey Mealo <jeffm@gisual.com>

--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -1467,6 +1467,25 @@ spec:
                               an immediate segment switch.
                             type: boolean
                         type: object
+                      retryConfiguration:
+                        description: Configuration for retry behavior when snapshot
+                          operations fail transiently
+                        properties:
+                          deadline:
+                            default: 10m
+                            description: |-
+                              The maximum time to wait for a snapshot operation to complete before
+                              considering it failed. Default is 10 minutes.
+                            pattern: ^([0-9]+(m|s))+$
+                            type: string
+                          maxRetries:
+                            default: 3
+                            description: |-
+                              The number of times to retry a failed snapshot operation before
+                              considering the backup failed. Default is 3 retries.
+                            minimum: 0
+                            type: integer
+                        type: object
                       snapshotOwnerReference:
                         default: none
                         description: SnapshotOwnerReference indicates the type of
