docs: update Slack channel invite
Closes #7018

Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,5 +4,5 @@ contact_links:
     url: https://github.com/cloudnative-pg/cloudnative-pg/discussions
     about: Please ask and answer questions here.
   - name: Slack chat
-    url: https://join.slack.com/t/cloudnativepg/shared_invite/zt-2vedd06pe-vMZf4wJ3l_H_hB3YCZ947A
+    url: https://github.com/cloudnative-pg/cloudnative-pg?tab=readme-ov-file#communications
     about: Please join the slack channel and interact with our community
