ci: inherit build platforms from the environment
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -561,6 +561,8 @@ jobs:
           registry: ${{ env.REGISTRY }}/${{ env.REPO_OWNER }}
           revision: ${{ env.COMMIT }}
         with:
+          set: |
+            *.platform=${{ env.PLATFORMS }}
           source: .
           push: ${{ env.PUSH }}
           no-cache: true
