--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -372,6 +372,8 @@ jobs:
           registry: ${{ env.REGISTRY }}/${{ env.REPO_OWNER }}
           revision: ${{ env.COMMIT }}
         with:
+          set: |
+            *.platform=${{ env.PLATFORMS }}
           source: .
           push: true
           no-cache: true
