fix: build race only when RACE env is set
We build the manager-race id with GoReleaser when the RACE env variable
is set

Signed-off-by: Jonathan Gonzalez V. <jonathan.gonzalez@enterprisedb.com>

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -534,6 +534,7 @@ jobs:
           DATE: ${{ env.DATE }}
           COMMIT: ${{ env.COMMIT }}
           VERSION: ${{ env.VERSION }}
+          RACE: "true"
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
