--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -153,7 +153,7 @@ jobs:
         with:
           distribution: goreleaser
           version: v2
-          args: release --clean --timeout 60m --id manager --id kubectl-cnpg
+          args: release --clean --timeout 60m
         env:
           DATE: ${{ env.DATE }}
           COMMIT: ${{ env.COMMIT }}
