chore(setup-cluster.sh): remove `prepare` command (#7055)
The `hack/setup-cluster.sh` prepare subcommand was once essential
for E2E environment setup. Now, this is fully handled by the GitHub workflow,
which automatically installs the right versions of kind and kubectl.

Closes #7050

Signed-off-by: Armando Ruocco <armando.ruocco@enterprisedb.com>
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>
Co-authored-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>
Co-authored-by: Niccolò Fei <niccolo.fei@enterprisedb.com>
(cherry picked from commit 7e6af25bf9cd4f6045643dd37ca7599724b7b58a)

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -654,19 +654,12 @@ jobs:
           username: ${{ env.REGISTRY_USER }}
           password: ${{ env.REGISTRY_PASSWORD }}
       -
-        # 'Retry' preparing the E2E test ENV
-        name: Prepare the environment
-        uses: nick-fields/retry@v3
+        name: Install Kind
+        uses: helm/kind-action@v1.12.0
         with:
-          timeout_seconds: 300
-          max_attempts: 3
-          on_retry_command: |
-            # Clear-ups before retries
-            sudo rm -rf /usr/local/bin/kind /usr/local/bin/kubectl
-          command: |
-            sudo apt-get update
-            sudo apt-get install -y gettext-base
-            sudo hack/setup-cluster.sh prepare /usr/local/bin
+          install_only: true
+          version: ${{ env.KIND_VERSION }}
+          kubectl_version: ${{ env.K8S_VERSION }}
       -
         name: Prepare patch for customization
         env:
