docs: clarify labels and annotations for backups
Closes #7083

Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_backups.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_backups.yaml
@@ -33,7 +33,8 @@ spec:
     name: v1
     schema:
       openAPIV3Schema:
-        description: Backup is the Schema for the backups API
+        description: A `Backup` resource is a request for a PostgreSQL backup by the
+          user.
         properties:
           apiVersion:
             description: |-
