--- a/docs/src/samples/cluster-example-with-probes.yaml
+++ b/docs/src/samples/cluster-example-with-probes.yaml
@@ -8,7 +8,7 @@ spec:
   probes:
     startup:
       type: streaming
-      lag: 16Mi
+      maximumLag: 16Mi
       failureThreshold: 30
       periodSeconds: 10
 
