chore: update generated files
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_backups.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_backups.yaml
@@ -33,7 +33,7 @@ spec:
     name: v1
     schema:
       openAPIV3Schema:
-        description: A `Backup` resource is a request for a PostgreSQL backup by the
+        description: A Backup resource is a request for a PostgreSQL backup by the
           user.
         properties:
           apiVersion:
