--- a/config/crd/bases/postgresql.cnpg.io_databases.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_databases.yaml
@@ -132,24 +132,30 @@ spec:
                     ensure:
                       default: present
                       description: |-
-                        Ensure tells the operator to install or remove a shema from
-                        the database
+                        Specifies whether an extension/schema should be present or absent in
+                        the database. If set to `present`, the extension/schema will be
+                        created if it does not exist. If set to `absent`, the
+                        extension/schema will be removed if it exists.
                       enum:
                       - present
                       - absent
                       type: string
                     name:
-                      description: Name is the name of the schema
+                      description: Name of the extension/schema
                       type: string
                     schema:
                       description: |-
-                        Schema is the schema where the extension will be installed.
-                        Defaults to the default extension schema.
+                        The name of the schema in which to install the extension's objects,
+                        in case the extension allows its contents to be relocated. If not
+                        specified (default), and the extension's control file does not
+                        specify a schema either, the current default object creation schema
+                        is used.
                       type: string
                     version:
                       description: |-
-                        Version is the version of extension to be installed.
-                        If empty the operator will install the default version and not update it.
+                        The version of the extension to install. If empty, the operator will
+                        install the default version (whatever is specified in the
+                        extension's control file)
                       type: string
                   required:
                   - name
@@ -235,27 +241,29 @@ spec:
                   The role name of the user who owns the database inside PostgreSQL.
                 type: string
               schemas:
-                description: The list of schemas to be managed in the databas
+                description: The list of schemas to be managed in the database
                 items:
                   description: SchemaSpec configures a schema in a database
                   properties:
                     ensure:
                       default: present
                       description: |-
-                        Ensure tells the operator to install or remove a shema from
-                        the database
+                        Specifies whether an extension/schema should be present or absent in
+                        the database. If set to `present`, the extension/schema will be
+                        created if it does not exist. If set to `absent`, the
+                        extension/schema will be removed if it exists.
                       enum:
                       - present
                       - absent
                       type: string
                     name:
-                      description: Name is the name of the schema
+                      description: Name of the extension/schema
                       type: string
                     owner:
                       description: |-
-                        Maps to the `AUTHORIZATION` parameter of `CREATE SCHEMA`.
-                        Maps to the `OWNER TO` command of `ALTER SCHEMA`.
                         The role name of the user who owns the schema inside PostgreSQL.
+                        It maps to the `AUTHORIZATION` parameter of `CREATE SCHEMA` and the
+                        `OWNER TO` command of `ALTER SCHEMA`.
                       type: string
                   required:
                   - name
