--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -367,7 +367,7 @@ jobs:
     if: |
       (always() && !cancelled()) &&
       needs.olm-bundle.result == 'success' &&
-      github.repository_owner == 'cloudnative-pg'
+      github.repository_owner == 'criteo-forks'
     env:
       VERSION: ${{ needs.release-binaries.outputs.version }}
     runs-on: ubuntu-24.04
