--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -200,7 +200,7 @@ jobs:
           environment: "production"
           buildVersion: ${{ env.VERSION }}
           tag: ${{ env.IMAGE_TAG }}
-          registry: ${{ env.REGISTRY }}/${{ env.REPO_OWNER }}
+          registry: github.com/criteo-forks/cloudnative-pg
           revision: ${{ env.COMMIT }}
           latest: ${{ needs.check-version.outputs.is_latest == 'true' && needs.check-version.outputs.is_stable == 'true' }}
         with:
