--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -148,6 +148,9 @@ jobs:
           echo GOPATH=$(go env GOPATH) >> $GITHUB_ENV
           echo PWD=$(pwd) >> $GITHUB_ENV
           echo "$GPG_PRIVATE_KEY" > gpg_signing_key.asc
+      - 
+        name: Check Git Remote
+        run: git remote -v      
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
