feat(databases): declarative management of extensions and schemas (#7062)
This patch introduces the `extensions` and `schemas` stanzas in the
Database resource to declaratively create, modify, and drop PostgreSQL
extensions and schemas within a database.

Closes: #6292 

## Release Notes

**Declarative management of extensions and schemas**: Introduced the
`extensions` and `schemas` stanzas in the Database resource to
declaratively create, modify, and drop PostgreSQL extensions and schemas
within a database.

Signed-off-by: Leonardo Cecchi <leonardo.cecchi@enterprisedb.com>
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>
Signed-off-by: Francesco Canovai <francesco.canovai@enterprisedb.com>
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>
Co-authored-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>
Co-authored-by: Francesco Canovai <francesco.canovai@enterprisedb.com>
Co-authored-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>
Co-authored-by: Gabriele Quaresima <gabriele.quaresima@enterprisedb.com>

--- a/tests/e2e/fixtures/declarative_databases/database-with-delete-reclaim-policy.yaml.template
+++ b/tests/e2e/fixtures/declarative_databases/database-with-delete-reclaim-policy.yaml.template
@@ -11,3 +11,9 @@ spec:
   databaseReclaimPolicy: delete
   cluster:
     name: cluster-with-declarative-databases
+  extensions:
+  - name: bloom
+    ensure: present
+  schemas:
+  - name: test_schema
+    ensure: present
