--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -149,8 +149,8 @@ jobs:
           echo PWD=$(pwd) >> $GITHUB_ENV
           echo "$GPG_PRIVATE_KEY" > gpg_signing_key.asc
       - 
-        name: Change Git remote to criteo-forks
-        run: git remote set-url origin https://github.com/criteo-forks/cloudnative-pg.git
+        name: Change Git remote
+        run: git remote set-url origin https://github.com/criteo-forks/cloudnative-pg.git    
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
